*SVN*

* Initial checkin: object-oriented client for restful HTTP resources which follow the Rails convention. [DHH]