@@ -1,3 +1,5 @@
 *SVN*
 
+* site= accepts URIs.  [Jeremy Kemper]
+
 * Initial checkin: object-oriented client for restful HTTP resources which follow the Rails convention. [DHH]
